# yuxi

./: .merge-complete  .temp  BUGS_AND_ARCHITECTURE.md  BUGS_AND_FIXES.md  Cargo.toml  Dockerfile  OPENAPI.md  README.md  SECURITY_SUMMARY.md  deploy.sh  entrypoint.sh  schema
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: app-yuxi-prod-AutoDeployTrigger-327f7fdb-c5eb-4734-8558-0a662b8314df.yml  cd.yml  ci.yml  yuxi-AutoDeployTrigger-478e4a3b-79e0-4fa5-860d-42021df08605.yml  yuxi-app-AutoDeployTrigger-a232f820-d366-425d-903e-6bf3e33adee0.yml
.idx/: dev.nix
api/: Cargo.toml
api/src/: action.rs  init.rs  lib.rs  openapi.rs
api/src/action/: handlers.rs  logic.rs  manager.rs  mod.rs  registry.rs  rounds.rs  state.rs  temp.rs  typing_api.rs
api/src/cache/: mod.rs
api/src/error/: adapter.rs  core.rs  handler.rs
api/src/extractor/: json.rs  valid.rs
api/src/middleware/: extension.rs  jwt.rs  session.rs
api/src/models/: mod.rs  response.rs
api/src/routers/: auth.rs  mod.rs  root.rs  tournament.rs  user.rs
api/src/scheduler/: mod.rs
api/src/utils/: jwt.rs
app/: Cargo.toml
app/src/: cache.rs  config.rs  lib.rs  state.rs
app/src/core/: algorithm.rs  debouncer.rs  dtos.rs  manager.rs  mod.rs  moderation.rs  timeout.rs
app/src/error/: mod.rs
app/src/persistence/: mod.rs  text.rs  tournaments.rs  users.rs
app/src/scheduler/: mod.rs
app/src/utils/: email.rs  jwt.rs  mod.rs
doc/src/: lib.rs  tournament.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
models/: Cargo.toml  package-lock.json  package.json
models/src/domains/: completed_sessions.rs  mod.rs  otp.rs  prelude.rs  sea_orm_active_enums.rs  sessions.rs  texts.rs  tournaments.rs  typing_history.rs  user.rs  users.rs
models/src/params/: mod.rs  otp.rs  tournament.rs  user.rs
models/src/queries/: mod.rs  tournament.rs
models/src/schemas/: completed_session.rs  mod.rs  pagination.rs  text.rs  tournament.rs  typing.rs  typing_history.rs  user.rs
src/: lib.rs  main.rs
src/action/: mod.rs  moderation.rs  moderationO.rs  timeout.rs  typing_api.rs
src/cache/: mod.rs
src/middleware/: auth.rs
src/shuttle/: mod.rs
src/tokio/: mod.rs
temp/: tournament.rs
temp/schemas/: typing.rs
tests/api/: blog.rs  mod.rs  openapi.rs  root.rs  user.rs
tests/app/persistence/: mod.rs  tournament.rs  user.rs
utils/: Cargo.toml
utils/src/: db.rs  file.rs  lib.rs
utils/src/testing/api/: mod.rs
