[package]
name = "Yuxi"
version = "0.1.0"
edition = "2021"
publish = false

# docs
authors = ["Isaac <nisaacdz@gmail.com>"]
description = "Rust backend for high performance typing web apps"
license = "MIT"
readme = "README.md"

[workspace]
members = ["api", "app", "models", "migration", "utils"]

[workspace.dependencies]
axum = { version = "0.8.1", default-features = false }
tower = { version = "0.5.2", default-features = false }
sea-orm = { version = "1.0.0", default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", default-features = false }
tracing = "0.1.40"
utoipa = { version = "5.3.1", default-features = false }
validator = { version = "0.20.0", default-features = false }

[dependencies]
api = { path = "api" }
utils = { path = "utils" }
serde_json = { workspace = true }
sea-orm = { workspace = true }

# logging
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# runtime
axum = { workspace = true, features = ["tokio", "http1", "http2"] }
tokio = { version = "1.38.0", features = ["full"] }
prefork = { version = "0.5.1", default-features = false, optional = true }

# shuttle runtime
shuttle-axum = { version = "0.53.0", optional = true }
shuttle-runtime = { version = "0.53.0", optional = true }
shuttle-shared-db = { version = "0.53.0", features = [
    "postgres",
], optional = true }
socketioxide = "0.16.2"
tower-service = "0.3.3"
uuid = { version = "1.16.0", features = ["v4"] }
tower-sessions = "0.14.0"

[dev-dependencies]
app = { path = "app" }
models = { path = "models" }

http-body-util = "0.1.3"
serde_json = { workspace = true }

[features]
default = ["prefork"]
prefork = ["prefork/tokio"]
shuttle = ["shuttle-axum", "shuttle-runtime", "shuttle-shared-db"]
