[package]
name = "yuxi"
version = "0.1.0"
edition = "2024"
publish = false

# docs
authors = ["Isaac <nisaacdz@gmail.com>"]
description = "Rust backend for high performance typing web apps"
license = "MIT"
readme = "README.md"

[workspace]
members = ["api", "app", "models", "migration", "utils"]

[workspace.dependencies]
tokio = { version = "1.38.0", features = ["full"] }
axum = { version = "0.8.1", default-features = false }
tower = { version = "0.5.2", default-features = false }
sea-orm = { version = "1.0.0", default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", default-features = false }
tracing = "0.1.40"
utoipa = { version = "5.3.1", default-features = false }
validator = { version = "0.20.0", default-features = false }
chrono = { version = "0.4.40", features = ["serde"] }
fake = { version = "4.2.0" }
bcrypt = { version = "0.17.0" }
uuid = { version = "1.16.0", features = ["v4"] }
tower-http = { version = "0.6.2", features = ["fs", "cors"] }
tower-service = "0.3.3"
tower-sessions = "0.14.0"
socketioxide = "0.16.2"
lazy_static = "1.5.0"
jsonwebtoken = "9.3.0"
base64 = "0.22.1"
anyhow = "1.0.86"
lettre = "0.11.17"
rand = "0.9.1"

[dependencies]
# Local dependencies
api = { path = "api" }
app = { path = "app" }
utils = { path = "utils" }
models = { path = "models" }

# Workspace dependencies
serde_json = { workspace = true }
sea-orm = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true, features = ["tokio", "http1", "http2"] }
bcrypt = { workspace = true }

# External dependencies
prefork = { version = "0.5.1", default-features = false, optional = true }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
redis = { version = "0.29.2", features = ["tokio-comp"] }
tower-http = "0.6.2"

# Shuttle runtime dependencies
shuttle-axum = { version = "0.53.0", optional = true }
shuttle-runtime = { version = "0.53.0", optional = true }
shuttle-shared-db = { version = "0.53.0", features = [
    "postgres",
], optional = true }

[dev-dependencies]
app = { path = "app" }
models = { path = "models" }
http-body-util = "0.1.3"
serde_json = { workspace = true }

[features]
default = ["prefork"]
prefork = ["prefork/tokio"]
shuttle = ["shuttle-axum", "shuttle-runtime", "shuttle-shared-db"]
