[package]
name = "api"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
axum = { workspace = true, features = ["macros", "query", "json"] }
serde = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
validator = { workspace = true, features = ["derive"] }
fake = { workspace = true }
serde_json = { workspace = true }
tower-http = { version = "0.6.2", features = ["fs", "cors"] }
tower-cookies = "0.11.0"
anyhow = "1.0.86"
dotenvy = "0.15.7"

# db
sea-orm = { workspace = true }

# local dependencies
app = { path = "../app" }
models = { path = "../models" }

[dev-dependencies]
