[package]
name = "api"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
axum = { workspace = true, features = ["macros", "query", "json"] }
serde = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
validator = { workspace = true, features = ["derive"] }
fake = { workspace = true }
serde_json = { workspace = true }
tower-cookies = "0.11.0"
anyhow = { workspace = true }
dotenvy = "0.15.7"
chrono = { workspace = true }
socketioxide = { workspace = true }
tower-sessions = { workspace = true, features = ["signed"] }
uuid = { workspace = true }
tower-http = { workspace = true, features = ["trace"] }
lazy_static = { workspace = true }
tokio = { workspace = true }
base64 = { workspace = true }

# db
sea-orm = { workspace = true }

# local dependencies
app = { path = "../app" }
models = { path = "../models" }

[dev-dependencies]
