[package]
name = "app"
version = "0.1.0"
edition = "2024"
publish = false


[dependencies]
models = { path = "../models" }
sea-orm = { workspace = true }
random_word = { workspace = true }
fake = { workspace = true }
bcrypt = { workspace = true }
chrono = { workspace = true }
jsonwebtoken = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
lettre = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }
socketioxide = { workspace = true }
tracing = { workspace = true }
lazy_static = { workspace = true }
serde_json = { workspace = true }
nanoid = { workspace = true }
