[package]
name = "models"
version = "0.1.0"
edition = "2021"
publish = false


[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sea-orm = { workspace = true, features = [
  "sqlx-postgres",
  "sqlx-sqlite",
  "runtime-tokio-rustls",
  "macros",
  "with-chrono",
  "with-rust_decimal",
  "with-json",
] }
validator = { workspace = true, features = ["derive"] }
chrono = { workspace = true }
